align fix

--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,6 @@ body {
 }
 
 .photos {
-	vertical-align: bottom;
 }
 
 .footer {
